fix bug 84668. r=shanjian sr=alecf on simplfied chinese window. force any return value of system font size < 9 to be at least 9 because we know the glyph less than 9 look very very ugly on SimpChinese system